[gd_scene load_steps=33 format=2]

[ext_resource path="res://scripts/game_world.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui_chat.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://tilesets/tileset01.tres" type="TileSet" id=4]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/HUD/CHARACTER HUD/HP ARMOR AMMO HUD.png" type="Texture" id=6]
[ext_resource path="res://assets/HUD/WEAPON ICONS/Pistol HUD.png" type="Texture" id=7]
[ext_resource path="res://assets/HUD/WEAPON ICONS/Flamethrower HUD.png" type="Texture" id=8]
[ext_resource path="res://assets/HUD/WEAPON ICONS/MG HUD.png" type="Texture" id=9]
[ext_resource path="res://assets/HUD/CHARACTER HUD/HP Icon.png" type="Texture" id=10]
[ext_resource path="res://assets/Settings/Bar BG.png" type="Texture" id=11]
[ext_resource path="res://assets/Settings/Bar.png" type="Texture" id=12]
[ext_resource path="res://assets/HUD/CHARACTER HUD/Armor.png" type="Texture" id=13]
[ext_resource path="res://assets/HUD/CHARACTER HUD/Ammo Icon.png" type="Texture" id=14]
[ext_resource path="res://assets/Settings/Settings BG.png" type="Texture" id=15]
[ext_resource path="res://assets/Settings/Description Area.png" type="Texture" id=16]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 4
light_mode = 1

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 111, 231 )

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 4
light_mode = 1

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 103, 58 )

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 4
light_mode = 1

[sub_resource type="ShaderMaterial" id=18]

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 178, 72 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 79, 46 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 79, 46 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 79, 46 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 15, 14 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 28, 7 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 28, 7 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 11, 8 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 15, 16 )

[node name="GameWorld" type="Node2D"]
script = ExtResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]
layer = 0

[node name="btClearFocus" type="Button" parent="HUD"]
self_modulate = Color( 1, 1, 1, 0 )
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.24555
margin_top = 20.3574
margin_right = 13.2456
margin_bottom = 40.3574
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelPlayerList" type="Panel" parent="HUD"]
self_modulate = Color( 1, 1, 1, 0.486275 )
show_behind_parent = true
material = SubResource( 1 )
margin_left = 106.292
margin_top = 145.126
margin_right = 919.292
margin_bottom = 542.126
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblLocalPlayer" type="Label" parent="HUD/PanelPlayerList"]
margin_left = 37.0465
margin_top = 67.1096
margin_right = 792.047
margin_bottom = 89.1096
text = "LocalPlayerName"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boxListRed" type="VBoxContainer" parent="HUD/PanelPlayerList"]
margin_left = 25.0
margin_top = 92.0
margin_right = 772.0
margin_bottom = 205.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boxListBlue" type="VBoxContainer" parent="HUD/PanelPlayerList"]
margin_left = 25.0
margin_top = 211.0
margin_right = 772.0
margin_bottom = 355.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/PanelPlayerList"]
margin_left = 32.3171
margin_top = 19.6537
margin_right = 152.317
margin_bottom = 47.6537
text = "Players Names"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelServerInfo" type="Panel" parent="HUD"]
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
material = SubResource( 2 )
margin_left = 453.492
margin_top = 11.3967
margin_right = 603.492
margin_bottom = 48.3967
custom_styles/panel = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblServerName" type="Label" parent="HUD/PanelServerInfo"]
margin_left = 11.8718
margin_top = 3.4917
margin_right = 89.8718
margin_bottom = 17.4917
text = "ServerName"

[node name="lblPing" type="Label" parent="HUD/PanelServerInfo"]
margin_left = 12.5701
margin_top = 16.7934
margin_right = 52.5701
margin_bottom = 30.7934
text = "Ping: -"

[node name="PanelFakeLatency" type="Panel" parent="HUD"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
material = SubResource( 3 )
margin_left = 880.0
margin_top = 10.0
margin_right = 1010.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/PanelFakeLatency"]
margin_right = 40.0
margin_bottom = 14.0
text = "Simulate latency"

[node name="txtFakeLatency" type="SpinBox" parent="HUD/PanelFakeLatency"]
margin_top = 14.0
margin_right = 74.0
margin_bottom = 38.0
max_value = 2000.0

[node name="ChatRoot" parent="HUD" instance=ExtResource( 2 )]
light_mask = 0
material = SubResource( 18 )
use_parent_material = true
margin_left = 10.0
margin_top = 300.0
margin_right = 260.0
margin_bottom = 590.0

[node name="PanelPlayer" type="Panel" parent="HUD"]
margin_left = 20.1232
margin_top = 8.07394
margin_right = 343.123
margin_bottom = 138.074
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipedWeapon" type="Node2D" parent="HUD/PanelPlayer"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="HUD/PanelPlayer/EquipedWeapon"]
position = Vector2( 43.8871, 61.0255 )
scale = Vector2( 1.30769, 1.27508 )
frames = SubResource( 9 )

[node name="Label" type="Label" parent="HUD/PanelPlayer/EquipedWeapon"]
margin_left = 105.003
margin_top = 91.9936
margin_right = 124.003
margin_bottom = 105.994
text = "12"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slash" type="Label" parent="HUD/PanelPlayer/EquipedWeapon"]
margin_left = 121.421
margin_top = 97.9572
margin_right = 133.421
margin_bottom = 111.957
text = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="HUD/PanelPlayer/EquipedWeapon"]
margin_left = 122.294
margin_top = 102.569
margin_right = 145.294
margin_bottom = 116.569
text = "12"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelHp" type="Panel" parent="HUD/PanelPlayer"]
margin_left = 157.673
margin_top = 43.9903
margin_right = 185.673
margin_bottom = 67.9903
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="HUD/PanelPlayer/PanelHp"]
margin_left = 36.6984
margin_top = 1.00974
margin_right = 154.698
margin_bottom = 21.0097
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelAmo" type="Panel" parent="HUD/PanelPlayer"]
margin_left = 68.0147
margin_top = 87.1147
margin_right = 91.0147
margin_bottom = 110.115
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelArmor" type="Panel" parent="HUD/PanelPlayer"]
margin_left = 160.0
margin_top = 84.2262
margin_right = 186.0
margin_bottom = 111.226
custom_styles/panel = SubResource( 15 )

[node name="ProgressBar" type="ProgressBar" parent="HUD/PanelPlayer/PanelArmor"]
margin_left = 34.3715
margin_top = 3.33189
margin_right = 152.372
margin_bottom = 23.3319
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="b1" type="Position2D" parent="SpawnPoints"]
position = Vector2( 57.4258, 98.7466 )

[node name="b2" type="Position2D" parent="SpawnPoints"]
position = Vector2( 66.9856, 431.948 )

[node name="b3" type="Position2D" parent="SpawnPoints"]
position = Vector2( 60.6787, 249.48 )

[node name="b4" type="Position2D" parent="SpawnPoints"]
position = Vector2( 63.8917, 331.987 )

[node name="b5" type="Position2D" parent="SpawnPoints"]
position = Vector2( 52.6658, 171.773 )

[node name="b6" type="Position2D" parent="SpawnPoints"]
position = Vector2( 130.452, 103.546 )

[node name="b7" type="Position2D" parent="SpawnPoints"]
position = Vector2( 911.134, 189.227 )

[node name="b8" type="Position2D" parent="SpawnPoints"]
position = Vector2( 174.959, 260.627 )

[node name="b9" type="Position2D" parent="SpawnPoints"]
position = Vector2( 174.959, 260.627 )

[node name="b10" type="Position2D" parent="SpawnPoints"]
position = Vector2( 174.959, 260.627 )

[node name="b11" type="Position2D" parent="SpawnPoints"]
position = Vector2( 174.959, 260.627 )

[node name="b12" type="Position2D" parent="SpawnPoints"]
position = Vector2( 174.959, 260.627 )

[node name="b13" type="Position2D" parent="SpawnPoints"]
position = Vector2( 174.959, 260.627 )

[node name="b14" type="Position2D" parent="SpawnPoints"]
position = Vector2( 174.959, 260.627 )

[node name="b15" type="Position2D" parent="SpawnPoints"]
position = Vector2( 174.959, 260.627 )

[node name="b16" type="Position2D" parent="SpawnPoints"]
position = Vector2( 174.959, 260.627 )

[node name="r1" type="Position2D" parent="SpawnPoints"]
position = Vector2( 920.575, 114.693 )

[node name="r2" type="Position2D" parent="SpawnPoints"]
position = Vector2( 822.241, 140.079 )

[node name="r3" type="Position2D" parent="SpawnPoints"]
position = Vector2( 820.694, 433.614 )

[node name="r4" type="Position2D" parent="SpawnPoints"]
position = Vector2( 920.694, 363.8 )

[node name="r5" type="Position2D" parent="SpawnPoints"]
position = Vector2( 806.334, 281.333 )

[node name="r6" type="Position2D" parent="SpawnPoints"]
position = Vector2( 912.681, 271.813 )

[node name="r7" type="Position2D" parent="SpawnPoints"]
position = Vector2( 168.572, 422.547 )

[node name="r8" type="Position2D" parent="SpawnPoints"]
position = Vector2( 919.107, 438.413 )

[node name="r9" type="Position2D" parent="SpawnPoints"]
position = Vector2( 919.107, 438.413 )

[node name="r10" type="Position2D" parent="SpawnPoints"]
position = Vector2( 919.107, 438.413 )

[node name="r11" type="Position2D" parent="SpawnPoints"]
position = Vector2( 919.107, 438.413 )

[node name="r12" type="Position2D" parent="SpawnPoints"]
position = Vector2( 919.107, 438.413 )

[node name="r13" type="Position2D" parent="SpawnPoints"]
position = Vector2( 919.107, 438.413 )

[node name="r14" type="Position2D" parent="SpawnPoints"]
position = Vector2( 919.107, 438.413 )

[node name="r15" type="Position2D" parent="SpawnPoints"]
position = Vector2( 919.107, 438.413 )

[node name="r16" type="Position2D" parent="SpawnPoints"]
position = Vector2( 919.107, 438.413 )

[node name="lblTMPDebug" type="Label" parent="."]
visible = false
margin_left = 360.0
margin_top = 580.0
margin_right = 1020.0
margin_bottom = 594.0
text = "asdf"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
format = 1
tile_data = PoolIntArray( -524283, 4, 0, -524282, 4, 0, -524281, 4, 0, -524280, 4, 0, -524279, 4, 0, -524278, 4, 0, -458747, 4, 0, -458746, 3, 0, -458745, 3, 0, -458744, 3, 0, -458743, 3, 0, -458742, 4, 0, -393211, 4, 0, -393210, 3, 0, -393209, 3, 0, -393208, 3, 0, -393207, 1, 0, -393206, 4, 0, -327675, 4, 0, -327674, 1, 0, -327673, 3, 0, -327672, 1, 0, -327671, 1, 0, -327670, 4, 0, -262139, 4, 0, -262138, 1, 0, -262137, 1, 0, -262136, 1, 0, -262135, 1, 0, -262134, 4, 0, -196603, 4, 0, -196602, 1, 0, -196601, 3, 0, -196600, 1, 0, -196599, 1, 0, -196598, 4, 0, -131067, 4, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 3, 0, -131062, 4, 0, -3, 4, 0, -2, 4, 0, -1, 4, 0, -65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 4, 0, -65532, 4, 0, -65531, 4, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 4, 0, -65525, 4, 0, -65524, 4, 0, -65523, 4, 0, -65522, 4, 0, -65521, 4, 0, -65520, 4, 0, -65519, 4, 0, 65533, 4, 0, 65534, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 4, 0, 131069, 4, 0, 131070, 1, 0, 131071, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 4, 0, 196605, 4, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 4, 0, 262141, 4, 0, 262142, 1, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 4, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 4, 0, 327677, 4, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 4, 0, 393213, 4, 0, 393214, 1, 0, 393215, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 4, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 4, 0, 458749, 4, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 4, 0, 524285, 4, 0, 524286, 1, 0, 524287, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 4, 0, 589821, 4, 0, 589822, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 4, 0, 655357, 4, 0, 655358, 1, 0, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 4, 0, 720893, 4, 0, 720894, 4, 0, 720895, 4, 0, 655360, 4, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0, 655370, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 655376, 4, 0, 655377, 4, 0 )

[node name="icon3" type="Sprite" parent="."]
modulate = Color( 0.576471, 0.517647, 0.980392, 1 )
self_modulate = Color( 1, 1, 1, 0.258824 )
position = Vector2( 116.302, 343.986 )
scale = Vector2( 2.46023, 6.27568 )
texture = ExtResource( 3 )

[node name="icon4" type="Sprite" parent="."]
modulate = Color( 0.984314, 0.0235294, 0.0235294, 1 )
self_modulate = Color( 1, 1, 1, 0.207843 )
position = Vector2( 869.183, 274.247 )
scale = Vector2( 2.46023, 6.27568 )
texture = ExtResource( 3 )

[node name="PlayerRoot" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( -67.3406, 228.356 )
[connection signal="pressed" from="HUD/btClearFocus" to="." method="_on_btClearFocus_pressed"]
[connection signal="value_changed" from="HUD/PanelFakeLatency/txtFakeLatency" to="." method="_on_txtFakeLatency_value_changed"]
